nomad: my crome setting

--- a/Login/css/index.css
+++ b/Login/css/index.css
@@ -8,7 +8,9 @@
 
 body{
     background-color: #2d3436;
+    display: flex;
     text-align: center;
+    justify-content: center;
     color: #ecf0f1;
     padding: 10%;
 }
@@ -78,11 +80,6 @@ button{
     padding-left: 95%;
 }
 
-.js-place{
-    font-weight: 300;
-    font-size: 12px;
-    padding-left: 95%;
-}
 body {
     margin: 0;
     padding : 0;
@@ -95,7 +92,6 @@ body {
 }
 #study{
     width:100vw;
-    height: 300px;
 }
 
 @keyframes fadeIn{
